[package]
name = "catchphrase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.2.2"
gpt3_rs = { git = "https://github.com/Sleepy-Kitten/gpt3_rs" }
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
fastrand = "1.7.0"
log = "0.4.17"
env_logger = "0.9.0"
serde = "1.0.137"
ron = "0.7.1"

[profile.dev]
opt-level = 3
